packages/components/tool-bar/src/tool-bar.scss
:host {
  align-items: center;
  background: transparent;
  display: flex;
  flex-wrap: nowrap;
}

:host([align='end']) [part='wrapper'] {
  block-size: var(--sl-size-450);
  flex: 1; /* Allow the wrapper to grow, but only when aligned to the end, when aligned to start the overflow is broken */
  flex-wrap: wrap;
  justify-content: end;
}

:host([contained]) {
  background: var(--sl-elevation-surface-base-default);
  border: var(--sl-size-borderWidth-default) solid var(--sl-color-border-secondary-bold);
  border-radius: var(--sl-size-borderRadius-lg);
  margin: 0;
  padding: var(--sl-size-100);
}

:host(:state(empty)) {
  padding: 0;

  [part='wrapper'] {
    block-size: 0;
  }
}

:host([contained][inverted]) {
  background: var(--sl-elevation-surface-raised-primary);
  border-color: var(--sl-color-border-primary-plain);
}

::slotted(*) {
  flex-shrink: 0;
}

[part='wrapper'] {
  align-items: center;
  display: flex;
  gap: var(--sl-size-100);
  min-inline-size: 0;
}

:host([icon-only]) [part='wrapper'] {
  gap: var(--sl-size-050);

  sl-menu-button {
    margin-inline-start: var(--sl-size-050);
  }
}

sl-menu-button {
  margin-inline-start: var(--sl-size-100);

  sl-icon + hr {
    display: none;
  }
}

sl-menu-button[all-items-hidden] {
  margin-inline-start: 0;
}

hr + hr {
  display: none;
}

